--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,11 +1,8 @@
 {
-  // Use IntelliSense to learn about possible attributes.
-  // Hover to view descriptions of existing attributes.
-  // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "0.2.0",
   "configurations": [
     {
-      "name": "gcc - Build and debug active file",
+      "name": "g++ build and debug active file",
       "type": "cppdbg",
       "request": "launch",
       "program": "${fileDirname}/${fileBasenameNoExtension}",
@@ -22,7 +19,7 @@
           "ignoreFailures": true
         }
       ],
-      "preLaunchTask": "C/C++: gcc build active file",
+      "preLaunchTask": "g++ build active file",
       "miDebuggerPath": "/usr/bin/gdb"
     }
   ]
