searching for shortest path works

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,10 +4,20 @@
     {
       "type": "shell",
       "label": "g++ build active file",
-      "command": "/usr/bin/g++",
+      // "command": "/usr/bin/g++",
+      // "args": [
+      //   "-g",
+      //   "${file}",
+      //   "-o",
+      //   "${fileDirname}/${fileBasenameNoExtension}"
+      // ],
+      "command": "gcc",
       "args": [
-        "-g",
+        "-std=gnu99",
+        "-Wall",
         "${file}",
+        "-lpthread",
+        "-lm",
         "-o",
         "${fileDirname}/${fileBasenameNoExtension}"
       ],
