--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,7 @@
       "type": "cppdbg",
       "request": "launch",
       "program": "${fileDirname}/${fileBasenameNoExtension}",
-      "args": [],
+      "args": ["-b", "gamesave"],
       "stopAtEntry": false,
       "cwd": "${workspaceFolder}",
       "environment": [],
