still trying dir tree

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,9 @@
   "cmake.configureOnOpen": true,
   "files.enableTrash": true,
   "files.associations": {
-    "list": "c"
+    "list": "c",
+    "*.tcc": "c",
+    "fstream": "c",
+    "functional": "c"
   }
 }
