--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,8 +5,7 @@
       "name": "gcc build and debug active file",
       "type": "cppdbg",
       "request": "launch",
-      // "program": "${fileDirname}/${fileBasenameNoExtension}",
-      "program": "${workspaceRoot}/build/sop_game",
+      "program": "${fileDirname}/${fileBasenameNoExtension}",
       // "args": ["-b", "gamesave"],
       "stopAtEntry": false,
       "cwd": "${workspaceFolder}",
@@ -20,7 +19,7 @@
           "ignoreFailures": true
         }
       ],
-      "preLaunchTask": "gcc build active file",
+      "preLaunchTask": "g++ build active file",
       "miDebuggerPath": "/usr/bin/gdb"
     }
   ]
